[package]
name = "pallet-ads-router"
version = "0.1.0"
authors = ["Nexus Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nexus-blockchain/nexus.git"
description = "Ads Router — 路由适配层: 根据 PlacementId 分发到 Entity 或 GroupRobot 适配器"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-ads-primitives = { path = "../primitives", default-features = false }
pallet-ads-entity = { path = "../entity", default-features = false }
pallet-ads-grouprobot = { path = "../grouprobot", default-features = false }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-entity-common = { path = "../../entity/common", features = ["std"] }
pallet-grouprobot-primitives = { path = "../../grouprobot/primitives", features = ["std"] }

[features]
default = ["std"]
std = [
	"pallet-ads-primitives/std",
	"pallet-ads-entity/std",
	"pallet-ads-grouprobot/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"sp-runtime/try-runtime",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
