[package]
name = "pallet-arbitration"
version = "0.1.0"
license = "MIT-0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"], default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-arithmetic = { workspace = true }
pallet-escrow = { path = "../escrow", default-features = false }
pallet-storage-service = { workspace = true }
pallet-storage-lifecycle = { workspace = true }
pallet-trading-common = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-arithmetic/std",
    "pallet-escrow/std",
    "pallet-storage-service/std",
    "pallet-storage-lifecycle/std",
    "pallet-trading-common/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]


