[package]
name = "pallet-escrow"
version = "0.1.0"
license = "MIT-0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"], default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "log/std",
]
runtime-benchmarks = []
try-runtime = []

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
