[package]
name = "pallet-entity-commission"
version = "0.2.0"
description = "NEXUS Entity 返佣管理模块 - 插件化架构 re-export wrapper"
authors = ["NEXUS Team"]
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-commission-common = { path = "common", default-features = false }
pallet-commission-core = { path = "core", default-features = false }
pallet-commission-referral = { path = "referral", default-features = false }
pallet-commission-multi-level = { path = "multi-level", default-features = false }
pallet-commission-level-diff = { path = "level-diff", default-features = false }
pallet-commission-single-line = { path = "single-line", default-features = false }
pallet-commission-pool-reward = { path = "pool-reward", default-features = false }

[features]
default = ["std"]
std = [
    "pallet-commission-common/std",
    "pallet-commission-core/std",
    "pallet-commission-referral/std",
    "pallet-commission-multi-level/std",
    "pallet-commission-level-diff/std",
    "pallet-commission-single-line/std",
    "pallet-commission-pool-reward/std",
]
runtime-benchmarks = [
    "pallet-commission-core/runtime-benchmarks",
    "pallet-commission-referral/runtime-benchmarks",
    "pallet-commission-multi-level/runtime-benchmarks",
    "pallet-commission-level-diff/runtime-benchmarks",
    "pallet-commission-single-line/runtime-benchmarks",
    "pallet-commission-pool-reward/runtime-benchmarks",
]
try-runtime = [
    "pallet-commission-core/try-runtime",
    "pallet-commission-referral/try-runtime",
    "pallet-commission-multi-level/try-runtime",
    "pallet-commission-level-diff/try-runtime",
    "pallet-commission-single-line/try-runtime",
    "pallet-commission-pool-reward/try-runtime",
]
