[package]
name = "pallet-entity-loyalty"
version = "0.1.0"
description = "NEXUS Entity Loyalty 模块 - 统一积分 + NEX购物余额 + Token奖励/折扣入口"
authors = ["NEXUS Team"]
edition = "2021"
license = "MIT"

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }

pallet-entity-common = { path = "../common", default-features = false }
pallet-commission-common = { path = "../commission/common", default-features = false }

frame-benchmarking = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "pallet-entity-common/std",
    "pallet-commission-common/std",
    "frame-benchmarking?/std",
    "pallet-balances?/std",
    "sp-io?/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-entity-common/runtime-benchmarks",
    "pallet-commission-common/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-io",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-entity-common/try-runtime",
    "pallet-commission-common/try-runtime",
]
