[package]
name = "pallet-entity-market"
version = "0.1.0"
description = "实体代币 P2P 交易市场模块"
authors = ["Nexus Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nexus-blockchain/nexus.git"

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
log = { workspace = true }
pallet-entity-common = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"log/std",
	"pallet-entity-common/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
