[package]
name = "pallet-entity-token"
version = "0.8.0"
description = "NEXUS Entity 店铺代币模块 - pallet-assets 桥接层"
authors = ["NEXUS Team"]
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-assets = { workspace = true, optional = true }

# 内部依赖
pallet-entity-common = { path = "../common", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
frame-benchmarking = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "pallet-entity-common/std",
    "frame-benchmarking?/std",
    "pallet-assets?/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-entity-common/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-entity-common/try-runtime",
]
