[package]
name = "pallet-grouprobot-consensus"
version = "0.1.0"
authors = ["Nexus Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/memoio/nexus"
description = "GroupRobot Consensus — 节点质押 + TEE 加权奖励 + 消息去重 + 订阅管理 + Equivocation"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
pallet-grouprobot-primitives = { path = "../primitives", default-features = false }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"pallet-grouprobot-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
